linuxtips/day-5/barematel/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-service
spec:
  selector:
    nginx: blue
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-red-service
spec:
  selector:
    nginx: red
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
