linuxtips/day-5/barematel/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ec2-52-67-200-24.sa-east-1.compute.amazonaws.com
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: nginx-blue-service
                port:
                  number: 80
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: nginx-red-service
                port:
                  number: 80
